# 6502Emu

./: 6502Emu  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  cpu.cpp  cpu.hpp  instruction.cpp  instruction.hpp  main.cpp  mem.hpp  types.h
6502Emu_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpu.hpp  instruction.cpp  instruction.hpp  types.h
Catch_tests/: AddressingTests.cpp  CMakeLists.txt  Catch_tests_run  InstructionTests.cpp  Makefile  cmake_install.cmake
fmt/: Makefile  cmake_install.cmake
